# dbshell

./: CMakeLists.txt  Doxyfile  README
cmake/: FindLibiodbc.cmake  FindReadline.cmake
src/: CMakeLists.txt  connection_failed.cpp  connection_failed.hpp  db_adapter.hpp  dbshell.cpp  formatter.cpp  formatter.hpp  getopt.cpp  getopt.hpp  log.cpp  log.hpp  postgres_adapter.cpp  postgres_adapter.hpp  prefixes.cpp  prefixes.hpp  query_failed.cpp  query_failed.hpp  readline.cpp  readline.hpp  readline_adapter.cpp  readline_adapter.hpp  table.cpp  table.hpp  virtuoso_adapter.cpp  virtuoso_adapter.hpp  virtuoso_defines.hpp
src/table/: CMakeLists.txt  column.cpp  column.hpp  double_column.cpp  double_column.hpp  long_column.cpp  long_column.hpp  row.cpp  row.hpp  table.cpp  table.hpp
test/: CMakeLists.txt  log.cpp  log.cpp~  prefixes.cpp  table.cpp
